--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_2300\\934902888.py:21: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15404\\3618743489.py:19: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)\n"
      ]
     },
@@ -17,106 +17,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 - Train Loss: 1.7111, Valid Loss: 1.2022\n",
-      "Epoch 2 - Train Loss: 0.8865, Valid Loss: 0.5916\n",
-      "Epoch 3 - Train Loss: 0.2593, Valid Loss: 0.0280\n",
-      "Epoch 4 - Train Loss: 0.0274, Valid Loss: 0.0256\n",
-      "Epoch 5 - Train Loss: 0.0251, Valid Loss: 0.0237\n",
-      "Epoch 6 - Train Loss: 0.0233, Valid Loss: 0.0223\n",
-      "Epoch 7 - Train Loss: 0.0221, Valid Loss: 0.0212\n",
-      "Epoch 8 - Train Loss: 0.0187, Valid Loss: 0.0105\n",
-      "Epoch 9 - Train Loss: 0.0088, Valid Loss: 0.0068\n",
-      "Epoch 10 - Train Loss: 0.0058, Valid Loss: 0.0045\n",
-      "Epoch 11 - Train Loss: 0.0038, Valid Loss: 0.0029\n",
-      "Epoch 12 - Train Loss: 0.0025, Valid Loss: 0.0020\n",
-      "Epoch 13 - Train Loss: 0.0017, Valid Loss: 0.0014\n",
-      "Epoch 14 - Train Loss: 0.0013, Valid Loss: 0.0011\n",
-      "Epoch 15 - Train Loss: 0.0010, Valid Loss: 0.0008\n",
-      "Epoch 16 - Train Loss: 0.0008, Valid Loss: 0.0007\n",
-      "Epoch 17 - Train Loss: 0.0006, Valid Loss: 0.0006\n",
-      "Epoch 18 - Train Loss: 0.0005, Valid Loss: 0.0005\n",
-      "Epoch 19 - Train Loss: 0.0004, Valid Loss: 0.0004\n",
-      "Epoch 20 - Train Loss: 0.0004, Valid Loss: 0.0004\n",
-      "Epoch 21 - Train Loss: 0.0003, Valid Loss: 0.0003\n",
-      "Epoch 22 - Train Loss: 0.0003, Valid Loss: 0.0003\n",
-      "Epoch 23 - Train Loss: 0.0003, Valid Loss: 0.0004\n",
-      "Epoch 24 - Train Loss: 0.0002, Valid Loss: 0.0002\n",
-      "Epoch 25 - Train Loss: 0.0002, Valid Loss: 0.0002\n",
-      "Epoch 26 - Train Loss: 0.0002, Valid Loss: 0.0002\n",
-      "Epoch 27 - Train Loss: 0.0002, Valid Loss: 0.0002\n",
-      "Epoch 28 - Train Loss: 0.0001, Valid Loss: 0.0002\n",
-      "Epoch 29 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 30 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 31 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 32 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 33 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 34 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 35 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 36 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 37 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 38 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 39 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 40 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 41 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 42 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 43 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 44 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 45 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 46 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 47 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 48 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 49 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 50 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 51 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 52 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 53 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 54 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 55 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 56 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 57 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 58 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 59 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 60 - Train Loss: 0.0001, Valid Loss: 0.0001\n",
-      "Epoch 61 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 62 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 63 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 64 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 65 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 66 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 67 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 68 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 69 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 70 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 71 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 72 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 73 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 74 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 75 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 76 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 77 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 78 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 79 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 80 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 81 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 82 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 83 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 84 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 85 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 86 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 87 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 88 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 89 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 90 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 91 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 92 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 93 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 94 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 95 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 96 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 97 - Train Loss: 0.0000, Valid Loss: 0.0001\n",
-      "Epoch 98 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 99 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
-      "Epoch 100 - Train Loss: 0.0000, Valid Loss: 0.0000\n",
+      "Epoch 1 - Train Loss: 0.2156, Valid Loss: 0.3024\n",
+      "Epoch 2 - Train Loss: 0.2140, Valid Loss: 0.2959\n",
+      "Epoch 3 - Train Loss: 0.2156, Valid Loss: 0.2894\n",
+      "Epoch 4 - Train Loss: 0.1995, Valid Loss: 0.2830\n",
+      "Epoch 5 - Train Loss: 0.1700, Valid Loss: 0.2766\n",
+      "Epoch 6 - Train Loss: 0.1956, Valid Loss: 0.2703\n",
+      "Epoch 7 - Train Loss: 0.1816, Valid Loss: 0.2640\n",
+      "Epoch 8 - Train Loss: 0.1617, Valid Loss: 0.2579\n",
+      "Epoch 9 - Train Loss: 0.2025, Valid Loss: 0.2519\n",
+      "Epoch 10 - Train Loss: 0.2136, Valid Loss: 0.2459\n",
+      "Epoch 11 - Train Loss: 0.1832, Valid Loss: 0.2399\n",
+      "Epoch 12 - Train Loss: 0.1664, Valid Loss: 0.2340\n",
+      "Epoch 13 - Train Loss: 0.1695, Valid Loss: 0.2283\n",
+      "Epoch 14 - Train Loss: 0.1471, Valid Loss: 0.2228\n",
+      "Epoch 15 - Train Loss: 0.1577, Valid Loss: 0.2175\n",
+      "Epoch 16 - Train Loss: 0.1420, Valid Loss: 0.2124\n",
+      "Epoch 17 - Train Loss: 0.1603, Valid Loss: 0.2075\n",
+      "Epoch 18 - Train Loss: 0.1281, Valid Loss: 0.2028\n",
+      "Epoch 19 - Train Loss: 0.1340, Valid Loss: 0.1984\n",
+      "Epoch 20 - Train Loss: 0.1258, Valid Loss: 0.1941\n",
+      "Epoch 21 - Train Loss: 0.1179, Valid Loss: 0.1900\n",
+      "Epoch 22 - Train Loss: 0.1431, Valid Loss: 0.1860\n",
+      "Epoch 23 - Train Loss: 0.1241, Valid Loss: 0.1822\n",
+      "Epoch 24 - Train Loss: 0.1332, Valid Loss: 0.1784\n",
+      "Epoch 25 - Train Loss: 0.1275, Valid Loss: 0.1747\n",
+      "Epoch 26 - Train Loss: 0.1218, Valid Loss: 0.1712\n",
+      "Epoch 27 - Train Loss: 0.1410, Valid Loss: 0.1676\n",
+      "Epoch 28 - Train Loss: 0.1110, Valid Loss: 0.1642\n",
+      "Epoch 29 - Train Loss: 0.1117, Valid Loss: 0.1608\n",
+      "Epoch 30 - Train Loss: 0.0935, Valid Loss: 0.1575\n",
       "Training complete.\n"
      ]
     }
@@ -132,7 +62,7 @@
     "import os\n",
     "\n",
     "# 파일 경로에서 사용자 코드 추출\n",
-    "file_path = '../data/user_code_total/user_code_006.csv'\n",
+    "file_path = '../data/user_code_total/user6_1000.csv'\n",
     "user_code = os.path.basename(file_path).split('.')[0]  # 'user_code_006'\n",
     "\n",
     "\n",
@@ -180,14 +110,14 @@
     "            return decoded.view(x.size(0), x.size(1), -1)\n",
     "\n",
     "# 모델 초기화\n",
-    "model = Autoencoder(input_dim=1, hidden_dim=50, num_layers=2)\n",
+    "model = Autoencoder(input_dim=1, hidden_dim=32, num_layers=2) # hidden_dim = 50 -> 32\n",
     "\n",
     "# 손실 함수와 옵티마이저\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# 학습 과정\n",
-    "epochs = 100\n",
+    "epochs = 30\n",
     "best_loss = float('inf')\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
